--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,334 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@charset "UTF-8";
 
-/*!
- * Bootstrap v4.4.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+/* roboto-100normal - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100;
+  src: local("Roboto Thin "), local("Roboto-Thin"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-100.woff2?7370c3679472e9560965ff48a4399d0b) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-100.woff?5cb7edfceb233100075dc9a1e12e8da3) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-100italic - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 100;
+  src: local("Roboto Thin italic"), local("Roboto-Thinitalic"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-100italic.woff2?f8b1df51ba843179fa1cc9b53d58127a) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-100italic.woff?f9e8e590b4e0f1ff83469bb2a55b8488) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-300normal - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 300;
+  src: local("Roboto Light "), local("Roboto-Light"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-300.woff2?ef7c6637c68f269a882e73bcb57a7f6a) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-300.woff?b00849e00f4c2331cddd8ffb44a6720b) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-300italic - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 300;
+  src: local("Roboto Light italic"), local("Roboto-Lightitalic"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-300italic.woff2?14286f3ba79c6627433572dfa925202e) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-300italic.woff?4df32891a5f2f98a363314f595482e08) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-400normal - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: local("Roboto Regular "), local("Roboto-Regular"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-400.woff2?479970ffb74f2117317f9d24d9e317fe) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-400.woff?60fa3c0614b8fb2f394fa29944c21540) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-400italic - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 400;
+  src: local("Roboto Regular italic"), local("Roboto-Regularitalic"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-400italic.woff2?51521a2a8da71e50d871ac6fd2187e87) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-400italic.woff?fe65b8335ee19dd944289f9ed3178c78) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-500normal - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: local("Roboto Medium "), local("Roboto-Medium"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-500.woff2?020c97dc8e0463259c2f9df929bb0c69) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-500.woff?87284894879f5b1c229cb49c8ff6decc) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-500italic - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 500;
+  src: local("Roboto Medium italic"), local("Roboto-Mediumitalic"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-500italic.woff2?db4a2a231f52e497c0191e8966b0ee58) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-500italic.woff?288ad9c6e8b43cf02443a1f499bdf67e) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-700normal - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 700;
+  src: local("Roboto Bold "), local("Roboto-Bold"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-700.woff2?2735a3a69b509faf3577afd25bdf552e) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-700.woff?adcde98f1d584de52060ad7b16373da3) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-700italic - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 700;
+  src: local("Roboto Bold italic"), local("Roboto-Bolditalic"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-700italic.woff2?da0e717829e033a69dec97f1e155ae42) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-700italic.woff?81f57861ed4ac74741f5671e1dff2fd9) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-900normal - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 900;
+  src: local("Roboto Black "), local("Roboto-Black"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-900.woff2?9b3766ef4a402ad3fdeef7501a456512) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-900.woff?bb1e4dc6333675d11ada2e857e7f95d7) format("woff");
+  /* Modern Browsers */
+}
+
+/* roboto-900italic - latin */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 900;
+  src: local("Roboto Black italic"), local("Roboto-Blackitalic"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-900italic.woff2?ebf6d1640ccddb99fb49f73c052c55a8) format("woff2"), url(/fonts/vendor/typeface-roboto/files/roboto-latin-900italic.woff?28f9151055c950874d2c6803a39b425b) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-100normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100;
+  src: local("Poppins Thin "), local("Poppins-Thin"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-100.woff2?46a15b4fc54cfca883f84d6dd080cd3d) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-100.woff?ad37abfaab272d36dae659840954d1d6) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-100italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 100;
+  src: local("Poppins Thin italic"), local("Poppins-Thinitalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-100italic.woff2?a1c50095d922a8f4222ab83911a13dbd) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-100italic.woff?f1dcb8253031e839d164463115ce13bd) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-200normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 200;
+  src: local("Poppins Extra Light "), local("Poppins-Extra Light"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-200.woff2?4e9592cdcbbbf7a0c610c754cb389fe1) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-200.woff?7eef082fb93671877eff57d4ee4f3990) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-200italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 200;
+  src: local("Poppins Extra Light italic"), local("Poppins-Extra Lightitalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-200italic.woff2?de4421341942d11714a20399e6ba09ef) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-200italic.woff?db53fe94622d2fbbf2fc6a22411cbd7e) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-300normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 300;
+  src: local("Poppins Light "), local("Poppins-Light"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-300.woff2?e8794816c5eaeaa9dd20a6d77ea3b272) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-300.woff?5c5aa25747e329a14d9ab8be881cbe02) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-300italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 300;
+  src: local("Poppins Light italic"), local("Poppins-Lightitalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-300italic.woff2?263658ab20600be255b10da96fe872b5) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-300italic.woff?e125f1e2de9a2150a521f55c482b8151) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-400normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: local("Poppins Regular "), local("Poppins-Regular"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-400.woff2?1a280523d375e9358d5229df34fc8e94) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-400.woff?46a7d48240d428c9dc3d4ff579199312) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-400italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 400;
+  src: local("Poppins Regular italic"), local("Poppins-Regularitalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-400italic.woff2?ac1612e21731e1a027139bd574ecf5e5) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-400italic.woff?9c9695b08b40f038891a8445c18f05ce) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-500normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: local("Poppins Medium "), local("Poppins-Medium"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-500.woff2?61e2d96d01a7eba5ea3ec1bad7e736a8) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-500.woff?1372de09cfc3e9a62af4234fd331e8e9) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-500italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 500;
+  src: local("Poppins Medium italic"), local("Poppins-Mediumitalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-500italic.woff2?2fa39b3957f9546871ce490ebc0ff531) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-500italic.woff?335c9c91b108673bd54f574969c1b7ae) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-600normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 600;
+  src: local("Poppins SemiBold "), local("Poppins-SemiBold"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-600.woff2?aa4405ed937295296cf8510f437628e0) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-600.woff?e3bbab8d37ba508809f78c4baf02ebdb) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-600italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 600;
+  src: local("Poppins SemiBold italic"), local("Poppins-SemiBolditalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-600italic.woff2?148405f9cdfa8278aede01cfc9b40367) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-600italic.woff?4e1036758ebde5e016b4b2c16294a3e6) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-700normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 700;
+  src: local("Poppins Bold "), local("Poppins-Bold"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-700.woff2?e535f7856b24153e0f3146e8f90a45c5) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-700.woff?bc1e47a3976358aa868a72de5a85de5a) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-700italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 700;
+  src: local("Poppins Bold italic"), local("Poppins-Bolditalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-700italic.woff2?5cfb020a3193dddf2dc041eb7e183ad3) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-700italic.woff?89874573d9b2380672f3c5685263f6c4) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-800normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 800;
+  src: local("Poppins ExtraBold "), local("Poppins-ExtraBold"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-800.woff2?b5cd7d83a71851bd0d449c3cd5ddadfc) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-800.woff?bde99287fe27e0e3ee89058a0affd4cd) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-800italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 800;
+  src: local("Poppins ExtraBold italic"), local("Poppins-ExtraBolditalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-800italic.woff2?28a7dac2331454b658d6861582bf35e6) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-800italic.woff?1d727abb1018c5cc6331c1e26169d590) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-900normal - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 900;
+  src: local("Poppins Black "), local("Poppins-Black"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-900.woff2?f030f5cfef05f4e5bc834075ec3a6a91) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-900.woff?fde0f399fa4b71074e88b511f893c492) format("woff");
+  /* Modern Browsers */
+}
+
+/* poppins-900italic - latin */
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-display: swap;
+  font-weight: 900;
+  src: local("Poppins Black italic"), local("Poppins-Blackitalic"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-900italic.woff2?f3c803b2d12574ab2cb68f2969e03a65) format("woff2"), url(/fonts/vendor/typeface-poppins/files/poppins-latin-900italic.woff?e8d920f5bf6dea0b9fe56768c15fdffd) format("woff");
+  /* Modern Browsers */
+}
 
 :root {
   --blue: #3490dc;
@@ -34,7 +357,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Nunito", sans-serif;
+  --font-family-sans-serif: "Poppins", "Roboto", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -66,7 +389,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", "Roboto", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -6376,7 +6699,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6501,7 +6824,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -10884,5 +11207,21 @@ a.text-dark:focus {
 
 body {
   background-color: #f8fafa;
+}
+
+.test-roboto {
+  font-family: "Roboto";
+}
+
+.test-popins {
+  font-family: "Poppins";
+}
+
+.test-gilroy {
+  font-family: "Gill Sans MT";
+}
+
+.test-gill-sans-mt {
+  font-family: "Gilroy";
 }
 
