--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -1,3 +1,19 @@
 body {
     background-color: #f8fafa;
 }
+
+.test-roboto {
+    font-family: 'Roboto';
+}
+
+.test-popins {
+    font-family: 'Poppins';
+}
+
+.test-gilroy {
+    font-family: 'Gill Sans MT';
+}
+
+.test-gill-sans-mt {
+    font-family: 'Gilroy';
+}
