--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -1,6 +1,3 @@
-body {
-    background-color: #f8fafa;
-}
 
 .test-roboto {
     font-family: 'Roboto';
@@ -16,4 +13,14 @@ body {
 
 .test-gill-sans-mt {
     font-family: 'Gilroy';
+}
+
+.wrapper {
+    @include media-breakpoint-up(sm) {
+        padding: 0 100px;
+    }
+}
+
+footer {
+    background-color: $footer-bg;
 }
