--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,10 +1,23 @@
-// Body
-$body-bg: #f8fafc;
+$body-bg: #FFFFFF; // основной цвет фона
+$body-color: #222222; // основной цвет
+$footer-bg: #F9F9F9; // цвет фона футера
 
 // Typography
 $font-family-sans-serif: 'Poppins', 'Roboto', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+// Настройки заголовков
+$headings-font-family: 'Roboto', sans-serif;
+$headings-font-weight: 700;
+
+$grid-breakpoints: (
+	xs: 0,
+	sm: 480px,
+	md: 720px,
+	lg: 1024px,
+	xl: 1600px
+);
 
 // Colors
 $blue: #3490dc;
