--- a/resources/sass/_fonts.scss
+++ b/resources/sass/_fonts.scss
@@ -11,3 +11,5 @@
 // Gilroy
 // @import "~typeface-poppins";
 // похож на poppins
+
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
