--- a/public/css/app.css
+++ b/public/css/app.css
@@ -494,7 +494,7 @@ sup {
 
 a {
   color: #3490dc;
-  text-decoration: none;
+  text-decoration: underline;
   background-color: transparent;
 }
 
@@ -549,7 +549,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #6c757d;
+  color: #999999;
   text-align: left;
   caption-side: bottom;
 }
@@ -765,7 +765,7 @@ h6,
 }
 
 .display-4 {
-  font-size: 3.5rem;
+  font-size: 3.1rem;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -2667,7 +2667,7 @@ textarea.form-control {
 
 .form-check-input[disabled] ~ .form-check-label,
 .form-check-input:disabled ~ .form-check-label {
-  color: #6c757d;
+  color: #999999;
 }
 
 .form-check-label {
@@ -2988,6 +2988,7 @@ textarea.form-control.is-invalid {
   font-weight: 400;
   color: #222222;
   text-align: center;
+  text-decoration: none;
   vertical-align: middle;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -3652,7 +3653,7 @@ fieldset:disabled a.btn {
 .btn-link {
   font-weight: 400;
   color: #3490dc;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .btn-link:hover {
@@ -3946,6 +3947,7 @@ input[type=button].btn-block {
   font-weight: 400;
   color: #212529;
   text-align: inherit;
+  text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border: 0;
@@ -4777,6 +4779,7 @@ input[type=button].btn-block {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  text-decoration: none;
 }
 
 .nav-link:hover,
@@ -5583,6 +5586,7 @@ input[type=button].btn-block {
   margin-left: -1px;
   line-height: 1.25;
   color: #3490dc;
+  text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -6098,6 +6102,7 @@ a.badge-dark.focus {
   position: relative;
   display: block;
   padding: 0.75rem 1.25rem;
+  text-decoration: none;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
@@ -11120,7 +11125,7 @@ a.text-dark:focus {
 }
 
 .text-muted {
-  color: #6c757d !important;
+  color: #999999 !important;
 }
 
 .text-black-50 {
@@ -11271,6 +11276,18 @@ a.text-dark:focus {
 
 .test-gill-sans-mt {
   font-family: "Gilroy";
+}
+
+.font-size-12 {
+  font-size: 12px !important;
+}
+
+.font-size-15 {
+  font-size: 15px !important;
+}
+
+.font-size-16 {
+  font-size: 16px !important;
 }
 
 @media (min-width: 480px) {
